source/css/scss/objects/_lists.scss
/* ... */
/*------------------------------------*\
    Ordered list with circled numbers
    with regular or yellow dots
\*------------------------------------*/

ol {
  padding-right: 0;
  margin-left: 0;
  list-style-type: none;
  counter-reset: step;

  &.a-circle-list {
    @include a-fontSize18;

    li {
      margin-bottom: $spacer * 1.5;

      span {
        @include a-fontReg;

        display: block;
        padding: 0;
        padding-left: $spacer * 2.5;
        margin: 0;
        margin-top: $spacer * -2;
        margin-left: 10px;

        span {
          @include a-fontBold;

          display: inline;
          padding: 0;
          margin: 0;
        }
      }

      &::before {
        @include a-fontBold;

        position: relative;
        top: 3px;
        padding: 5px 9px 4px 9px;
        margin-right: 10px;
        content: counter( step );
        counter-increment: step;
        border: 2px solid $blue;
        border-radius: 50%;
      }
    }
  }

  &.a-circle-list-yellow {
    li {
      &::before {
        @include a-fontReg;

        background-color: $yellow;
        border: none;
      }
    }
  }
}


/*------------------------------------*\
    Unordered list with icons
\*------------------------------------*/

.a-icon-list {
  list-style-type: none;

  li {
    margin-bottom: $spacer * 1.5;
  }

  a {
    color: $black;
    border: none;

    &:hover {
      color: $blue;
    }
  }

  i {
    padding-right: 5px;
    vertical-align: middle;
  }

  b {
    padding-right: 5px;
  }
}

/*------------------------------------*\
    Diverse - Flyttes??
\*------------------------------------*/

.a-btn-group {
  ol {
    &.show-numbers {
      list-style-type: decimal;
    }
  }
}

.a-list-heading {
  position: relative;

  .a-list-heading-actions {
    position: absolute;
    top: 0;
    right: $spacer / 2;

    &:hover {
      cursor: pointer;
    }

    i {
      vertical-align: middle;
    }
  }
}

/*
  overriding jquery autocomplete
*/
.a-autocomplete-container {
  position: absolute;
  z-index: 10;
  display: block;
  width: 100%;
  margin-top: -2px;
  overflow: auto;
  background-color: $white;
  border-color: $blue;
  border-width: 2px;

  @media screen and (min-width: 768px) {
    width: 150%;
  }

  .a-list {
    max-height: $spacer * 26;
    overflow-x: hidden;
    border: 2px solid $blue;

    li {
      @extend .a-fontSizeXXS;

      margin: 0 $spacer * 2;

      &:first-of-type {
        @include a-fontBold;
      }

      &:last-of-type {
        margin-bottom: $spacer;
      }

      &.a-js-autocomplete-header {
        padding: 5px 0;
      }

      .ui-menu-item-wrapper {
        padding: 5px 0;

        &.ui-state-active {
          background: linear-gradient(to top, transparent 2px, $blue-light 2px); // keep dotted bottom border
          outline: none;
        }
      }
    }
  }

  // copy from jquery ui css
  .ui-helper-hidden-accessible {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0 0 0 0);
    border: none;
  }
}

